Terraform/load_balancer.tf
resource "aws_lb_target_group" "alb-tg" {
  name            = "alb-tg"
  vpc_id          = aws_vpc.name.id
  port            = 80
  protocol        = "HTTP"
  ip_address_type = "ipv4"

  health_check {
    protocol            = "HTTP"
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
    matcher             = "200"
  }
  tags = {
    Name = "alb-tg"
  }
}

resource "aws_alb" "alb" {
  name               = "alb"
  load_balancer_type = "application"
  internal           = false
  ip_address_type    = "ipv4"
  security_groups    = [aws_security_group.alb.id]
  subnets            = aws_subnet.public[*].id

  tags = {
    Name = "app-alb"
  }
}

resource "aws_lb_listener" "http_listener" {
  load_balancer_arn = aws_alb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.alb-tg.arn
  }
}
